<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FragmentAlbumList"
    android:layout_marginTop="60dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:id="@+id/fragmentAlbumList">



    <ImageView
        android:id="@+id/btnCrearAlbum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/btnagregaralbum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/albumsRv"
        android:layout_margin="25dp"
        />

    <ImageView
        android:id="@+id/imAlbumes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/albumes"
        app:layout_constraintTop_toTopOf = "parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="12dp"

        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/albumsRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imAlbumes"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="12dp"
        tools:listitem="@layout/album_item"
        />
</androidx.constraintlayout.widget.ConstraintLayout>