<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_menu"
    android:name="fragment_menu"
    app:defaultNavHost="true">

    <!-- TODO: Update blank fragment layout -->


    
    <TextView
        android:id="@+id/tvAlbum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="12dp"
        android:text="@string/menu_album"
        android:textSize="22sp"
        android:gravity="center"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tvArtista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/tvAlbum"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="12dp"
        android:text="@string/menu_Artistas"
        android:textSize="22sp"
        android:gravity="center"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tvColeccionista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_margin="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="64dp"
        android:text="@string/menu_coleccionistas"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvArtista"
        android:gravity="center"/>


</androidx.constraintlayout.widget.ConstraintLayout>