<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.FragmentAlbumDetail"
    android:layout_marginTop="60dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:id="@+id/fragmentAddTrack">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tvTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:gravity="center"
        android:text="@string/agregar_track"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="12dp"/>


    <TextView
        android:id="@+id/tvAlbumTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTittle"
        android:textColor="@color/black"
        android:layout_marginTop="35dp"
        android:layout_marginStart="35dp"
        android:text="@string/album"
        android:textSize="20sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvAlbumName"
        android:layout_width="wrap_content"
        android:maxWidth="225dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTittle"
        android:gravity="center"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="25dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tvCanciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:gravity="center"
        android:text="Nueva Canción"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAlbumTittle"
        android:layout_margin="12dp"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="Nombre"
        app:layout_constraintTop_toBottomOf="@id/tvCanciones"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="25dp"
        />
    <EditText
        android:id="@+id/etDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="Duración"
        app:layout_constraintTop_toBottomOf="@id/etName"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="25dp"
        />

    <ImageView
        android:id="@+id/btnAddTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/addtrack"
        app:layout_constraintTop_toBottomOf="@id/etDuration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="25dp"
        android:contentDescription="Agregar canción"/>


</androidx.constraintlayout.widget.ConstraintLayout>